# incendium

./: .copier-answers.yml  .cz.toml  .cz.yaml  .devcontainer.json  .editorconfig  .flake8  .gitignore  .gitmodules  .isort.cfg  .mailmap  .mypy.ini  .pre-commit-config.yaml  .pydocstyle  .pydocstylerc  .pylintrc  .sourcery.yaml  .wakatime-project  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README.md.bak  cliff.toml  project.json  pyproject.toml  requirements.ci.txt  requirements.in  requirements.test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  jython.yml  main.yml  pip-compile-upgrade.yml  pip-compile.yml  pr-build.yml  pre-commit-autoupdate.yml  publish.yml  pylint.yml  pypi_upload.yml  tox-docker.yml  tox.yml
com.inductiveautomation.perspective/page-config/: resource.json
com.inductiveautomation.perspective/session-props/: props.json  resource.json
com.inductiveautomation.vision/client-tags/: resource.json
ignition/global-props/: resource.json
ignition/script-python/incendium/__init__/: code.py  resource.json
ignition/script-python/incendium/__version__/: code.py  resource.json
ignition/script-python/incendium/constants/: code.py  resource.json
ignition/script-python/incendium/dataset/: code.py  resource.json
ignition/script-python/incendium/date/: code.py  resource.json
ignition/script-python/incendium/db/: code.py  resource.json
ignition/script-python/incendium/exceptions/: code.py  resource.json
ignition/script-python/incendium/net/: code.py  resource.json
ignition/script-python/incendium/tag/: code.py  resource.json
ignition/script-python/incendium/user/: code.py  resource.json
ignition/script-python/incendium/util/: code.py  resource.json
ignition/script-python/incendium/version/: code.py  resource.json
ignition/script-python/incendium/vision/__init__/: code.py  resource.json
ignition/script-python/incendium/vision/gui/: code.py  resource.json
ignition/script-python/incendium/vision/nav/: code.py  resource.json
incendium/: .pydoclint  .pylintrc  README.md  constants.py  db.py  gui.py  net.py  requirements.in  requirements.txt  setup.py  tox.ini
incendium-stubs/: README.md  pyproject.toml  requirements.txt  tox.ini
incendium-stubs/stubs/incendium/: db.pyi  tag.pyi  user.pyi
incendium-stubs/stubs/incendium/vision/: nav.pyi
incendium/src/incendium/: __about__.py  __init__.py  dataset.py  db.py  l10n.py  time.py
incendium/src/incendium/helper/: __init__.py
incendium/src/incendium/vision/: __init__.py  gui.py  user.py
pkg/: .isort.cfg  .mypy.ini  MANIFEST.in  README.md  setup.py  tox.ini
pkg/src/incendium/: __about__.py  __init__.py  constants.py  date.py  db.py  net.py
pkg/src/incendium/vision/: nav.py
requirements/: build.txt  dev.txt
src/: dataset.py  date.py  db.py  gui.py  nav.py  net.py  tag.py  user.py  util.py
src/incendium/: __about__.py  __init__.py  __version__.py  constants.py  dataset.py  date.py  db.py  exceptions.py  gui.py  nav.py  net.py  tag.py  user.py  util.py  version.py
src/incendium/helper/: types.py
src/incendium/vision/: __init__.py  gui.py  nav.py
stubs/: .flake8  .mailmap  .mypy.ini  LICENSE  README.md  pyproject.toml  requirements.txt  tox.ini
stubs/stubs/incendium/: constants.pyi  dataset.pyi  date.pyi  db.pyi  exceptions.pyi  gui.pyi  l10n.pyi  net.pyi  tag.pyi  time.pyi  user.pyi
stubs/stubs/incendium/helper/: types.pyi
stubs/stubs/incendium/vision/: gui.pyi  user.pyi
