[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "wheel",
]

[tool.black]
line-length = 79

[tool.commitizen]
name = "cz_conventional_commits"

[tool.isort]
extra_standard_library = ["typing"]
line_length= 79
profile = "black"
py_version = 27

[tool.mypy]
python_version = 2.7

[tool.pydocstyle]
convention = "google"
