[metadata]
name = incendium
version = 1.1.0
description = Package that extends and wraps Ignition Scripting API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thecesrom/incendium
author = César Román
author_email = cesar@thecesrom.dev
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 Only
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing :: Mocking
keywords =
    hmi
    ignition
    inductive automation
    scada

[options]
package_dir =
    =src
packages = find:
install_requires =
    ignition-api
python_requires = ==2.7.18

[options.packages.find]
where = src
