[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.2",
]

[project]
name = "incendium-stubs"
version = "0.0.1"
description = "Package that extends and wraps Ignition Scripting API"
readme = "README.md"
keywords = [ "incendium" ]
license = "MIT"
authors = [ { name = "César Román", email = "cesar@coatl.dev" } ]
requires-python = ">=3.9,<3.13"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Manufacturing",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Stubs Only",
  "Typing :: Typed",
]
dependencies = [
  "ignition-api-stubs",
]
urls.Homepage = "https://github.com/ignition-devs/incendium"
urls.Source = "https://github.com/ignition-devs/incendium"
urls.Tracker = "https://github.com/ignition-devs/incendium/issues"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "stubs" }
package-data."*" = [ "*.pyi", "py.typed" ]
